demo-project-mysql-v.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
    name: mysql
spec:
    selector:
        matchLabels:
            app: mysql
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
              - image: mysql:5.6
                name: mysql
                ports:
                    - containerPort: 3306
                      name: mysql
                volumeMounts:
                    - name: mysql-persistent-storage
                      mountPath: /var/lib/mysql
                volumes:
                    - name: mysql-persistent-storage
                persistentVolumeClaim:
                    claimName: mysql-pv-claim
