aggService.yml
apiVersion: v1
kind: Service
metadata:
  name: aggservice
spec:
  selector:
    app: aggservice
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
          name: aggservice
spec:
          replicas: 1
          selector:
            matchLabels:
              app: aggservice
          template:
            metadata:
              labels:
                app: aggservice
            spec:
              containers:
                - name: service1
                  image: rajeshramawat/aggservice
                  ports:
                    - containerPort: 8080
                  imagePullPolicy: Always
