aggregator-service.yml
apiVersion: v1
kind: Service
metadata:
    name: spring-boot-agg-service
spec:
    selector:
        app: spring-boot-agg-project
    ports:
        - port: 81
          targetPort: 8080
    type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-agg-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-agg-project
  template:
    metadata:
      labels:
        app: spring-boot-agg-project
    spec:
      containers:
        - name: app
          image: rajeshramawat/agg-project
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
