demo-project-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-demo-project
spec:
  selector:
    app: mysql-demo-project
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-demo-project
spec:
  selector:
    matchLabels:
      app: mysql-demo-project
  template:
    metadata:
      labels:
        app: mysql-demo-project
    spec:
      containers:
        - name: mysql-demo-project
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mysql-demo-pvc
