deo-project-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-project
spec:
  selector:
    app: spring-boot-demo-project
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
