orderService.yml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  selector:
    app: orderservice
  ports:
  - port: 80
    name: http
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
      name: orderservice
spec:
      replicas: 1
      selector:
        matchLabels:
          app: orderservice
      template:
        metadata:
          labels:
            app: orderservice
        spec:
          containers:
            - name: orderservice
              image: rajeshramawat/orderservice
              ports:
                - containerPort: 8080
              imagePullPolicy: Always
