service1.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: service1
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
          name: service1
spec:
          replicas: 1
          selector:
            matchLabels:
              app: service1
          template:
            metadata:
              labels:
                app: service1
            spec:
              containers:
                - name: service1
                  image: rajeshramawat/service1
                  ports:
                    - containerPort: 8080
                  imagePullPolicy: Always
