service2.yml
apiVersion: v1
kind: Service
metadata:
  name: service2
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
      name: service2
spec:
      replicas: 1
      selector:
        matchLabels:
          app: service2
      template:
        metadata:
          labels:
            app: service2
        spec:
          containers:
            - name: service2
              image: rajeshramawat/service2
              ports:
                - containerPort: 8080
              imagePullPolicy: Always
