userService.yml
apiVersion: v1
kind: Service
metadata:
    name: userservice
    labels:
        app: userservice
spec:
    selector:
        app: userservice
    ports:
        - port: 80
          name: http
          targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: rajeshramawat/userservice
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
