ingress-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /orderdetails
        backend:
          serviceName: spring-boot-agg-service
          servicePort: 8080
      - path: /orders
        backend:
          serviceName: spring-boot-order-service
          servicePort: 8080
